--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,187 @@
-asgiref
-django
-Pillow
-sqlparse
-tzdata
+anyio==4.4.0
+argcomplete==1.12.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+astroid==3.2.4
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+autopep8==2.3.1
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+Brlapi==0.8.2
+cachetools==5.4.0
+certifi==2024.7.4
+cffi==1.14.5
+chardet==4.0.0
+charset-normalizer==3.3.2
+cockpit @ file:///builddir/build/BUILD/cockpit-311.2/tmp/wheel/cockpit-311.2-py3-none-any.whl
+comm==0.2.2
+conda==4.14.0
+conda-package-handling==1.7.3
+cryptography==36.0.1
+cupshelpers==1.0
+cytoolz==0.11.2
+dasbus==1.4
+dbus-python==1.2.18
+debugpy==1.8.2
+decorator==4.4.2
+defusedxml==0.7.1
+dill==0.3.8
+distlib==0.3.8
+distro==1.5.0
+Django==4.2.14
+django-crispy-forms==2.3
+et-xmlfile==1.1.0
+exceptiongroup==1.2.2
+executing==2.0.1
+fastjsonschema==2.20.0
+file-magic==0.4.0
+filelock==3.15.4
+fqdn==1.5.1
+frozendict==1.2
+google-api-core==2.19.1
+google-api-python-client==2.141.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.63.2
+gpg==1.15.1
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+idna==2.10
+importlib_metadata==8.2.0
+iniparse==0.4
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.3
+isoduration==20.11.0
+isort==5.13.2
+jedi==0.19.1
+Jinja2==3.1.4
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.11
+libcomps==0.1.18
+lxml==4.6.5
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mistune==3.0.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+nftables==0.1
+notebook==7.2.1
+notebook_shim==0.2.4
+oauthlib==3.2.2
+openpyxl==3.1.5
+overrides==7.7.0
+package_name==0.1
+packaging==24.1
+pandocfilters==1.5.1
+parso==0.8.4
+perf==0.1
+pexpect==4.8.0
+pipenv==2024.0.1
+platformdirs==4.2.2
+ply==3.11
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.27.3
+psutil==5.8.0
+psycopg2-binary==2.9.9
+ptyprocess==0.6.0
+pure_eval==0.2.3
+py-cpuinfo==8.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycairo==1.20.1
+pycodestyle==2.12.1
+pycosat==0.6.3
+pycparser==2.20
+pycups==2.0.1
+pycurl==7.43.0.6
+pyenchant==3.2.0
+Pygments==2.18.0
+PyGObject==3.40.1
+pyinotify==0.9.6
+pylint==3.2.6
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+python-linux-procfs==0.7.3
+pyudev==0.22.0
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.19.1
+rpm==4.16.1.3
+rsa==4.9
+ruamel.yaml==0.16.6
+ruamel.yaml.clib==0.2.7
+selinux==3.6
+Send2Trash==1.8.3
+sepolicy==3.6
+setools==4.4.4
+setroubleshoot @ file:///builddir/build/BUILD/setroubleshoot-3.3.32/src
+six==1.15.0
+sniffio==1.3.1
+sos==4.7.1
+soupsieve==2.5
+sqlparse==0.5.1
+stack-data==0.6.3
+subscription-manager==1.29.40
+systemd-python==234
+terminado==0.18.1
+tinycss2==1.3.0
+tomli==2.0.1
+tomlkit==0.13.0
+toolz==0.11.2
+tornado==6.4.1
+tqdm==4.65.0
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==1.26.5
+uv==0.2.30
+virtualenv==20.26.3
+wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.3
+widgetsnbextension==4.0.11
+zipp==3.19.2
